--- a/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
+++ b/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,7 @@
     "\n",
     "from pyspark.ml.classification import LogisticRegression\n",
     "from pyspark.ml.evaluation import MulticlassClassificationEvaluator\n",
+    "from pyspark.ml import Pipeline\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2067,7 +2068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2078,7 +2079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2094,7 +2095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2125,7 +2126,7 @@
     "\n",
     "\n",
     "# Function to transform and clean rdd data\n",
-    "def cleanRDD(autoStr) :\n",
+    "def cleanRDD(autoStr):\n",
     "    \n",
     "    # checking indexing\n",
     "    if isinstance(autoStr, int):\n",
@@ -2169,7 +2170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2180,7 +2181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2192,7 +2193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2221,12 +2222,12 @@
    "source": [
     "# Use RDD, apply the function, convert to Dataframe and apply the select() function\n",
     "# train data\n",
-    "cleanTrainRDD2 = cleanTrainRDD.map(transformaVar)\n",
+    "cleanTrainRDD2 = cleanTrainRDD.map(transformVar)\n",
     "train_DF = spSession.createDataFrame(cleanTrainRDD2,[\"label\", \"features\"])\n",
     "train_DF.select(\"label\",\"features\").show(10)\n",
     "\n",
     "# test data\n",
-    "cleanTestRDD2 = cleanTestRDD.map(transformaVar)\n",
+    "cleanTestRDD2 = cleanTestRDD.map(transformVar)\n",
     "test_DF = spSession.createDataFrame(cleanTestRDD2,[\"label\", \"features\"])"
    ]
   },
@@ -2239,21 +2240,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception ignored in: <function JavaWrapper.__del__ at 0x7fa1f0fb27b8>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/spark/python/pyspark/ml/wrapper.py\", line 40, in __del__\n",
-      "    if SparkContext._active_spark_context and self._java_obj is not None:\n",
-      "AttributeError: 'MinMaxScaler' object has no attribute '_java_obj'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calling MinMaxScaler function\n",
     "minmax = MinMaxScaler(inputCol=\"features\", outputCol=\"MinMaxScaledFeatures\")\n",
@@ -2282,7 +2271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2316,21 +2305,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Binomial model\n",
     "lr = LogisticRegression(maxIter=10, regParam=0.3, elasticNetParam=0.8)\n",
     "\n",
-    "# # Fit binomial model\n",
-    "lrModel = lr.fit(scaledData.select('label', 'features'))\n",
+    "# Fit binomial model\n",
+    "lrModel = lr.fit(scaledTrainData.select('label', 'features'))\n",
     "\n",
     "# Multinomial model\n",
     "mlr = LogisticRegression(maxIter=10, regParam=0.3, elasticNetParam=0.8, family=\"multinomial\")\n",
     "\n",
     "# Fit multinomial model the model\n",
-    "mlrModel = mlr.fit(scaledData.select('label', 'features'))\n",
+    "mlrModel = mlr.fit(scaledTrainData.select('label', 'features'))\n",
     "\n",
     "# binomial model predictions\n",
     "binom_predictions = lrModel.transform(scaledTestData.select('label', 'features'))\n",
@@ -2341,7 +2330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2357,20 +2346,17 @@
    ],
    "source": [
     "# Evaluating models\n",
-    "# Select (prediction, true label) and compute test error\n",
-    "\n",
-    "# Select example rows to display.\n",
-    "# binom_predictions.show(5)\n",
-    "# multinom_predictions.show(5)\n",
-    "\n",
+    "# Select (prediction, true label) and compute test error and accuracy\n",
     "\n",
     "evaluator = MulticlassClassificationEvaluator(\n",
     "    labelCol=\"label\", predictionCol=\"prediction\", metricName=\"accuracy\")\n",
     "\n",
+    "# Evaluating binomial model\n",
     "bin_accuracy = evaluator.evaluate(binom_predictions)\n",
     "print(\"Test Error for binomial model = %g \" % (1.0 - bin_accuracy))\n",
     "print(\"Accuracy for binomial model = %g \" % (bin_accuracy))\n",
     "\n",
+    "# Evaluating multinomial model\n",
     "mult_accuracy = evaluator.evaluate(multinom_predictions)\n",
     "print(\"Test Error for multinomial model = %g \" % (1.0 - mult_accuracy))\n",
     "print(\"Accuracy for multinomial model = %g \" % (mult_accuracy))"
@@ -2382,7 +2368,304 @@
    "source": [
     "## Trying to optimizate model\n",
     "### Logistic regression optimization\n",
-    "Selecting most important features"
+    "Selecting most important features using PCA algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for binomial model for 3 features = 0.865627 \n",
+      "Accuracy for multinomial model for 3 features = 0.865627 \n",
+      "Accuracy for binomial model for 4 features = 0.865627 \n",
+      "Accuracy for multinomial model for 4 features = 0.865627 \n",
+      "Accuracy for binomial model for 5 features = 0.865627 \n",
+      "Accuracy for multinomial model for 5 features = 0.865627 \n",
+      "Accuracy for binomial model for 6 features = 0.865627 \n",
+      "Accuracy for multinomial model for 6 features = 0.865627 \n",
+      "Accuracy for binomial model for 7 features = 0.865627 \n",
+      "Accuracy for multinomial model for 7 features = 0.865627 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Applying pipeline to select features and train model\n",
+    "\n",
+    "# Binomial model\n",
+    "lr = LogisticRegression(maxIter=10, regParam=0.3, elasticNetParam=0.8)\n",
+    "\n",
+    "# Multinomial model\n",
+    "mlr = LogisticRegression(maxIter=10, regParam=0.3, elasticNetParam=0.8, family=\"multinomial\")\n",
+    "\n",
+    "# Checking model accuracy by varying the number of features\n",
+    "for k in range(3,8):\n",
+    "\n",
+    "    # Applying Dimension Reduction with PCA\n",
+    "    bankPCA = PCA(k = k, inputCol = \"features\", outputCol = \"pcaFeatures\")\n",
+    "    \n",
+    "    # Applying pipeline to select features and train model\n",
+    "    binom_pipeline = Pipeline(stages=[bankPCA, lr])\n",
+    "    multinom_pipeline = Pipeline(stages=[bankPCA, mlr])\n",
+    "\n",
+    "    # Fit the pipeline to training documents.\n",
+    "    binom_model = binom_pipeline.fit(scaledTrainData)\n",
+    "    multinom_model = multinom_pipeline.fit(scaledTrainData)\n",
+    "\n",
+    "    # Make predictions on test documents.\n",
+    "    binom_predictions = binom_model.transform(scaledTestData)\n",
+    "    multinom_predictions = multinom_model.transform(scaledTestData)\n",
+    "\n",
+    "    bin_accuracy = evaluator.evaluate(binom_predictions)\n",
+    "    print(\"Accuracy for binomial model for %g features = %g \" % (k, bin_accuracy))\n",
+    "\n",
+    "    # Evaluating multinomial model\n",
+    "    mult_accuracy = evaluator.evaluate(multinom_predictions)\n",
+    "    print(\"Accuracy for multinomial model for %g features = %g \" % (k, mult_accuracy))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Decreasing the number of variables did not change the model's performance.\n",
+    "###### Using standard deviation dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for binomial model for standard scaled data = 0.855086 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# binomial model\n",
+    "lr = LogisticRegression(maxIter=10, regParam=0.3, elasticNetParam=0.8)\n",
+    "\n",
+    "sd_train = scaledTrainData.select('label', 'scaledFeatures').withColumnRenamed(\"scaledFeatures\",\"features\")\n",
+    "sd_test = scaledTrainData.select('label', 'scaledFeatures').withColumnRenamed(\"scaledFeatures\",\"features\")\n",
+    "\n",
+    "# training model\n",
+    "sd_model = lr.fit(sd_train)\n",
+    "\n",
+    "# Predction\n",
+    "sd_prediction = sd_model.transform(sd_test)\n",
+    "\n",
+    "sd_accuracy = evaluator.evaluate(sd_prediction)\n",
+    "print(\"Accuracy for binomial model for standard scaled data = %g \" % (sd_accuracy))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Using min-max scaled deviation dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for binomial model for standard scaled data = 0.855086 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# binomial model\n",
+    "lr = LogisticRegression(maxIter=10, regParam=0.3, elasticNetParam=0.8)\n",
+    "\n",
+    "minmax_train = scaledTrainData.select('label', 'MinMaxScaledFeatures') \\\n",
+    "    .withColumnRenamed(\"MinMaxScaledFeatures\",\"features\")\n",
+    "\n",
+    "minmax_test = scaledTrainData.select('label', 'MinMaxScaledFeatures') \\\n",
+    "    .withColumnRenamed(\"MinMaxScaledFeatures\",\"features\")\n",
+    "\n",
+    "# training model\n",
+    "minmax_model = lr.fit(minmax_train)\n",
+    "\n",
+    "# Predction\n",
+    "minmax_prediction = minmax_model.transform(minmax_test)\n",
+    "\n",
+    "minmax_accuracy = evaluator.evaluate(minmax_prediction)\n",
+    "print(\"Accuracy for binomial model for standard scaled data = %g \" % (minmax_accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for binomial model for 7 features = 0.855086 \n",
+      "Accuracy for multinomial model for 7 features = 0.855086 \n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 7\n",
+    "\n",
+    "lr = LogisticRegression(maxIter=10, regParam=0.3, elasticNetParam=0.8)\n",
+    "\n",
+    "mlr = LogisticRegression(maxIter=10, regParam=0.3, elasticNetParam=0.8, family=\"multinomial\")\n",
+    "\n",
+    "# Applying Dimension Reduction with PCA\n",
+    "bankPCA = PCA(k = k, inputCol = \"features\", outputCol = \"pcaFeatures\")\n",
+    "\n",
+    "# Applying pipeline to select features and train model\n",
+    "binom_pipeline = Pipeline(stages=[bankPCA, lr])\n",
+    "multinom_pipeline = Pipeline(stages=[bankPCA, mlr])\n",
+    "\n",
+    "# Fit the pipeline to training documents.\n",
+    "binom_model = binom_pipeline.fit(sd_train)\n",
+    "multinom_model = multinom_pipeline.fit(sd_train)\n",
+    "\n",
+    "# Make predictions on test documents.\n",
+    "binom_predictions = binom_model.transform(sd_test)\n",
+    "multinom_predictions = multinom_model.transform(sd_test)\n",
+    "\n",
+    "bin_accuracy = evaluator.evaluate(binom_predictions)\n",
+    "print(\"Accuracy for binomial model for %g features = %g \" % (k, bin_accuracy))\n",
+    "\n",
+    "# Evaluating multinomial model\n",
+    "mult_accuracy = evaluator.evaluate(multinom_predictions)\n",
+    "print(\"Accuracy for multinomial model for %g features = %g \" % (k, mult_accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converting to a LabeledPoint (target, vector [resources])\n",
+    "cols = trainRdd.collect()[0].replace(\"\\\"\",'').split(\",\")\n",
+    "cols = trainRdd.collect()[0].replace(\"\\\"\",'').split(\",\")\n",
+    "cols = [col for col in cols if \"minute\" not in col]\n",
+    "del cols[0]\n",
+    "\n",
+    "drop_cols = ['churn', 'international_plan', 'voice_mail_plan']\n",
+    "\n",
+    "def labeledPoint(row):\n",
+    "    obj = (row[\"churn\"], row[\"international_plan\"], \\\n",
+    "           row[\"voice_mail_plan\"], Vectors.dense([row[col] for col in cols if col not in drop_cols]))\n",
+    "    return obj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+------------------+---------------+--------------------+\n",
+      "|label|international_plan|voice_mail_plan|            features|\n",
+      "+-----+------------------+---------------+--------------------+\n",
+      "|    0|                 0|              1|[44.0,128.0,3.0,2...|\n",
+      "|    0|                 0|              1|[33.0,107.0,3.0,2...|\n",
+      "|    0|                 0|              0|[5.0,137.0,3.0,0....|\n",
+      "|    0|                 1|              0|[33.0,84.0,1.0,0....|\n",
+      "|    0|                 1|              0|[49.0,75.0,3.0,0....|\n",
+      "|    0|                 1|              0|[31.0,118.0,2.0,0...|\n",
+      "|    0|                 0|              1|[43.0,121.0,2.0,2...|\n",
+      "|    0|                 1|              0|[25.0,147.0,3.0,0...|\n",
+      "|    0|                 0|              0|[3.0,117.0,1.0,0....|\n",
+      "|    0|                 1|              1|[41.0,141.0,3.0,3...|\n",
+      "+-----+------------------+---------------+--------------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cleanTrainRDD3 = cleanTrainRDD.map(labeledPoint)\n",
+    "train_DF2 = spSession.createDataFrame(cleanTrainRDD3,[\"label\", 'international_plan', \\\n",
+    "                                                      'voice_mail_plan', \"features\"])\n",
+    "train_DF2.show(10)\n",
+    "\n",
+    "# test data\n",
+    "cleanTestRDD3 = cleanTestRDD.map(labeledPoint)\n",
+    "test_DF2 = spSession.createDataFrame(cleanTestRDD3,[\"label\", 'international_plan', \\\n",
+    "                                                    'voice_mail_plan', \"features\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0,\n",
+       " 0,\n",
+       " 1,\n",
+       " DenseVector([44.0, 128.0, 3.0, 25.0, 110.0, 45.07, 99.0, 16.78, 91.0, 11.01, 3.0, 2.7, 1.0]))"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleanTrainRDD3.collect()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['state',\n",
+       " 'account_length',\n",
+       " 'area_code',\n",
+       " 'international_plan',\n",
+       " 'voice_mail_plan',\n",
+       " 'number_vmail_messages',\n",
+       " 'total_day_calls',\n",
+       " 'total_day_charge',\n",
+       " 'total_eve_calls',\n",
+       " 'total_eve_charge',\n",
+       " 'total_night_calls',\n",
+       " 'total_night_charge',\n",
+       " 'total_intl_calls',\n",
+       " 'total_intl_charge',\n",
+       " 'number_customer_service_calls',\n",
+       " 'churn']"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cols"
    ]
   },
   {
@@ -2391,19 +2674,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Aplicando Redução de Dimensionalidade com PCA\n",
-    "bankPCA = PCA(k = 3, inputCol = \"features\", outputCol = \"pcaFeatures\")\n",
-    "pcaModel = bankPCA.fit(bankDF)\n",
-    "pcaResult = pcaModel.transform(bankDF).select(\"label\",\"pcaFeatures\")\n",
-    "pcaResult.show(truncate = False)"
-   ]
   }
  ],
  "metadata": {
