--- a/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
+++ b/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,13 +36,16 @@
     "import folium\n",
     "from IPython.display import display\n",
     "from IPython.display import Image\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
     "\n",
     "from pyspark.ml.feature import StandardScaler\n",
     "from pyspark.ml.feature import MinMaxScaler\n",
     "\n",
     "from pyspark.ml.classification import LogisticRegression\n",
-    "from pyspark.ml.evaluation import MulticlassClassificationEvaluator\n",
+    "from pyspark.ml.evaluation import MulticlassClassificationEvaluator, BinaryClassificationEvaluator\n",
     "from pyspark.ml import Pipeline\n",
+    "from pyspark.sql.functions import monotonically_increasing_id, row_number\n",
+    "from pyspark.ml.tuning import CrossValidator, ParamGridBuilder\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
@@ -2551,6 +2554,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Applying standard scale to non-binary features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 106,
    "metadata": {},
@@ -2572,37 +2582,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 163,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----+------------------+---------------+--------------------+\n",
-      "|label|international_plan|voice_mail_plan|            features|\n",
-      "+-----+------------------+---------------+--------------------+\n",
-      "|    0|                 0|              1|[44.0,128.0,3.0,2...|\n",
-      "|    0|                 0|              1|[33.0,107.0,3.0,2...|\n",
-      "|    0|                 0|              0|[5.0,137.0,3.0,0....|\n",
-      "|    0|                 1|              0|[33.0,84.0,1.0,0....|\n",
-      "|    0|                 1|              0|[49.0,75.0,3.0,0....|\n",
-      "|    0|                 1|              0|[31.0,118.0,2.0,0...|\n",
-      "|    0|                 0|              1|[43.0,121.0,2.0,2...|\n",
-      "|    0|                 1|              0|[25.0,147.0,3.0,0...|\n",
-      "|    0|                 0|              0|[3.0,117.0,1.0,0....|\n",
-      "|    0|                 1|              1|[41.0,141.0,3.0,3...|\n",
-      "+-----+------------------+---------------+--------------------+\n",
-      "only showing top 10 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cleanTrainRDD3 = cleanTrainRDD.map(labeledPoint)\n",
     "train_DF2 = spSession.createDataFrame(cleanTrainRDD3,[\"label\", 'international_plan', \\\n",
     "                                                      'voice_mail_plan', \"features\"])\n",
-    "train_DF2.show(10)\n",
     "\n",
     "# test data\n",
     "cleanTestRDD3 = cleanTestRDD.map(labeledPoint)\n",
@@ -2612,68 +2598,232 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0,\n",
-       " 0,\n",
-       " 1,\n",
-       " DenseVector([44.0, 128.0, 3.0, 25.0, 110.0, 45.07, 99.0, 16.78, 91.0, 11.01, 3.0, 2.7, 1.0]))"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cleanTrainRDD3.collect()[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['state',\n",
-       " 'account_length',\n",
-       " 'area_code',\n",
-       " 'international_plan',\n",
-       " 'voice_mail_plan',\n",
-       " 'number_vmail_messages',\n",
-       " 'total_day_calls',\n",
-       " 'total_day_charge',\n",
-       " 'total_eve_calls',\n",
-       " 'total_eve_charge',\n",
-       " 'total_night_calls',\n",
-       " 'total_night_charge',\n",
-       " 'total_intl_calls',\n",
-       " 'total_intl_charge',\n",
-       " 'number_customer_service_calls',\n",
-       " 'churn']"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cols"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Calling StandardScaler function\n",
+    "scaler = StandardScaler(inputCol=\"features\", outputCol=\"scaledFeatures\",\n",
+    "                        withStd=True, withMean=False)\n",
+    "\n",
+    "# Train data\n",
+    "# Compute summary statistics by fitting the StandardScaler\n",
+    "scalerTrainModel = scaler.fit(train_DF2)\n",
+    "\n",
+    "# Normalize each feature to have unit standard deviation.\n",
+    "part_scaledTrainData = scalerTrainModel.transform(train_DF2)\n",
+    "\n",
+    "# Test data\n",
+    "# Compute summary statistics by fitting the StandardScaler\n",
+    "scalerTestModel = scaler.fit(test_DF2)\n",
+    "\n",
+    "# Normalize each feature to have unit standard deviation.\n",
+    "part_scaledTestData = scalerTestModel.transform(test_DF2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converting partially scaled train data to labeledpoint format\n",
+    "df1 = part_scaledTrainData.select('label')\n",
+    "df_features = part_scaledTrainData.select('international_plan', 'voice_mail_plan', 'scaledFeatures')\n",
+    "\n",
+    "# convert to vector column first\n",
+    "vector_col = \"corr_features\"\n",
+    "assembler = VectorAssembler(inputCols=df.columns, outputCol=\"features\")\n",
+    "df2 = assembler.transform(df_features).select(\"features\")\n",
+    "\n",
+    "# since there is no common column between these two dataframes add row_index so that it can be joined\n",
+    "df1=df1.withColumn('row_index', row_number().over(Window.orderBy(monotonically_increasing_id())))\n",
+    "df2=df2.withColumn('row_index', row_number().over(Window.orderBy(monotonically_increasing_id())))\n",
+    "\n",
+    "sd_train_data = df1.join(df2, on=[\"row_index\"]).drop(\"row_index\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converting partially scaled test data to labeledpoint format\n",
+    "df1 = part_scaledTestData.select('label')\n",
+    "df_features = part_scaledTestData.select('international_plan', 'voice_mail_plan', 'scaledFeatures')\n",
+    "\n",
+    "# convert to vector column first\n",
+    "vector_col = \"corr_features\"\n",
+    "assembler = VectorAssembler(inputCols=df.columns, outputCol=\"features\")\n",
+    "df2 = assembler.transform(df_features).select(\"features\")\n",
+    "\n",
+    "# since there is no common column between these two dataframes add row_index so that it can be joined\n",
+    "df1=df1.withColumn('row_index', row_number().over(Window.orderBy(monotonically_increasing_id())))\n",
+    "df2=df2.withColumn('row_index', row_number().over(Window.orderBy(monotonically_increasing_id())))\n",
+    "\n",
+    "sd_test_data = df1.join(df2, on=[\"row_index\"]).drop(\"row_index\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for binomial model for standard scaled data = 0.865627 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# binomial model\n",
+    "lr = LogisticRegression(maxIter=10, regParam=0.3, elasticNetParam=0.8)\n",
+    "\n",
+    "# training model\n",
+    "sd_model = lr.fit(sd_train_data)\n",
+    "\n",
+    "# Predction\n",
+    "sd_prediction = sd_model.transform(sd_test_data)\n",
+    "\n",
+    "sd_accuracy = evaluator.evaluate(sd_prediction)\n",
+    "print(\"Accuracy for binomial model for standard scaled data = %g \" % (sd_accuracy))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Tuning Hyperparameters using GridSearch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for binomial model for standard scaled data = 0.873425 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Logistic Regression\n",
+    "lr = LogisticRegression(maxIter=10)\n",
+    "\n",
+    "# Principal component analysys\n",
+    "bankPCA = PCA(inputCol = \"features\", outputCol = \"pcaFeatures\")\n",
+    "\n",
+    "# Configure an ML pipeline, which consists of two stages: pca and lr.\n",
+    "pipeline = Pipeline(stages=[bankPCA, lr])\n",
+    "\n",
+    "paramGrid = ParamGridBuilder() \\\n",
+    "    .addGrid(bankPCA.k, [3, 7]) \\\n",
+    "    .addGrid(lr.regParam, [0.1, 0.01]) \\\n",
+    "    .build()\n",
+    "\n",
+    "crossval = CrossValidator(estimator=pipeline,\n",
+    "                          estimatorParamMaps=paramGrid,\n",
+    "                          evaluator=BinaryClassificationEvaluator(),\n",
+    "                          numFolds=2)  # use 3+ folds in practice\n",
+    "\n",
+    "# Run cross-validation, and choose the best set of parameters.\n",
+    "cvModel = crossval.fit(sd_train_data)\n",
+    "\n",
+    "# Make predictions on test data. cvModel uses the best model found (lrModel).\n",
+    "prediction = cvModel.transform(sd_test_data)\n",
+    "\n",
+    "# Getting model accuracy\n",
+    "accuracy = evaluator.evaluate(prediction)\n",
+    "print(\"Accuracy for binomial model for standard scaled data = %g \" % (accuracy))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Final model\n",
+    "The model increased by GridSearch exibed the best result.\n",
+    "The final model presents accuracy of 0.87. The results are shown in the table below including churn probability predicted by model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1440    3]\n",
+      " [ 208   16]] \n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.87      1.00      0.93      1443\n",
+      "           1       0.84      0.07      0.13       224\n",
+      "\n",
+      "    accuracy                           0.87      1667\n",
+      "   macro avg       0.86      0.53      0.53      1667\n",
+      "weighted avg       0.87      0.87      0.82      1667\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "churn = prediction.select(\"label\").collect()\n",
+    "pred = prediction.select(\"prediction\").collect()\n",
+    "print(confusion_matrix(churn, pred), \"\\n\")\n",
+    "print(classification_report(churn, pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+----------+--------------------+\n",
+      "|label|prediction|         probability|\n",
+      "+-----+----------+--------------------+\n",
+      "|    0|       0.0|[0.86376816665536...|\n",
+      "|    0|       0.0|[0.88532873786386...|\n",
+      "|    0|       0.0|[0.87647319860020...|\n",
+      "|    0|       0.0|[0.84784057070522...|\n",
+      "|    0|       0.0|[0.84458517609688...|\n",
+      "|    0|       0.0|[0.85207567418292...|\n",
+      "|    0|       0.0|[0.92398442044881...|\n",
+      "|    0|       0.0|[0.90448400359170...|\n",
+      "|    0|       0.0|[0.87781159692731...|\n",
+      "|    0|       0.0|[0.94079072133711...|\n",
+      "|    0|       0.0|[0.91706791347850...|\n",
+      "|    0|       0.0|[0.92113463540154...|\n",
+      "|    0|       0.0|[0.89080069370671...|\n",
+      "|    0|       0.0|[0.89626220335811...|\n",
+      "|    0|       0.0|[0.82641452697078...|\n",
+      "|    0|       0.0|[0.82669958196628...|\n",
+      "|    0|       0.0|[0.93789818541283...|\n",
+      "|    0|       0.0|[0.83086156635377...|\n",
+      "|    0|       0.0|[0.86405382203406...|\n",
+      "|    0|       0.0|[0.90861093261906...|\n",
+      "+-----+----------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction.select('label', 'prediction', 'probability').show()"
+   ]
   }
  ],
  "metadata": {
